# circuitjs2schemdraw

./: README.md  component_warehouse.py  components.py  electronic_component.py  main.ipynb  main.py  pyproject.toml  schematic-tinkercad.stl  schematic.svg_0.1mm.stl  schematic.svg_0.3mm.stl  schematic.svg_5mm-svg2stl.stl  schemdraw.ipynb  troubleshooting.txt  visitor.ipynb  visitor.py
falstad_quirks/: test008.txt
src/: circuitjs_to_schemdraw.py  circuitjsgrammar.py  component_manifest.py  component_warehouse.py  components.py  drawing_state.py  electronic_component.py  pchannelmosfet.py  point.py  schemdraw_manifest.py  visitor.py
tests/: basic.txt  basic2.txt  basic3.txt  sample1.txt  sample2.txt  simplest.txt  test001.txt  test002.txt  test003.txt  test004.txt  test005.txt  test006.txt  test007.txt  test008.txt  test009.txt  test009b.txt  test010.txt  test011.txt  test_voltage.txt
